# azure-ai-vision-face-api-mcp-server

./: .env.example  .gitignore  README.md  pyproject.toml
bridge/: package-lock.json  package.json
bridge/server/: mcp-bridge.ts
src/: mcpServer.py
src/prompt_utils/: prompt_dispatch.py  prompt_parser.py
src/tools/: AzureFaceAttrib.py  BlobFolderTools.py  CompareImages.py  CreateLPG.py  DeleteFromLPG.py  DeleteLPG.py  DeletePersonFromLPG.py  EnrollFaceToLPG.py  IdentifyFaceInLPG.py  ListLPGs.py  ListPersonsInLPG.py  OpensetFaceAttrib.py
src/tools/utils/: __init__.py  _enums.py
tests/: conftest.py  test_prompt_live_compare_two_images.py  test_prompt_live_detect_mask_glasses.py  test_prompt_live_enroll_face.py
